Desktop layout navigation is now fixed to the top and is partially transparent. On mobile view it stays at the top of the page.

--- a/css/index.css
+++ b/css/index.css
@@ -167,15 +167,21 @@ nav {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
-  margin: 0 auto;
   padding-top: 13px;
   justify-content: center;
   max-width: 1000px;
   text-align: center;
+  position: fixed;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
+  opacity: 0.7;
 }
 @media (max-width: 500px) {
   nav {
     max-width: 500px;
+    position: relative;
+    opacity: 1;
   }
 }
 nav h1 {
@@ -191,6 +197,7 @@ nav .nav-links a {
   font-size: 1.65rem;
   text-decoration: none;
   padding: 0 14px;
+  transition: all 0.2s ease-in-out;
 }
 nav .nav-links a:visited {
   text-decoration: none;
@@ -207,6 +214,12 @@ footer {
 }
 .home header {
   color: #23293B;
+  padding-top: 100px;
+}
+@media (max-width: 500px) {
+  .home header {
+    padding-top: 0;
+  }
 }
 @media (max-width: 500px) {
   .home header div img {
