--- a/less/home-page.less
+++ b/less/home-page.less
@@ -4,6 +4,10 @@
 
   header {
     color: @header-font-color;
+    padding-top: 100px;
+    @media @mobile {
+      padding-top: 0;
+    }
     div {
       img {
         @media @mobile {
